# Backend/Routes/TestCase/testCaseRoutes.js
@@ -6,37 +6,53 @@ import {
   deleteTestCase,
   getTestCaseDetailsById,
   getTestStepByTestCase,
+  saveTestProcess,
+  updateTestProcess,
+  deleteTestProcess,
 } from "../../Controllers/TestCase/testCaseController.js";
 import { validatePermission } from "../../Utils/Middlewares/permissions.js";
 const Router = express.Router();
 
-Router.post("/", validatePermission("Team & Role", "add"), saveTestCase);
+Router.post("/", validatePermission("testcase", "add"), saveTestCase);
+Router.post("/process", validatePermission("testcase", "add"), saveTestProcess);
+
+Router.put(
+  "/process/:processId",
+  validatePermission("Ttestcase", "add"),
+  updateTestProcess
+);
+Router.delete(
+  "/process/:processId",
+  validatePermission("testcase", "add"),
+  deleteTestProcess
+);
+
 Router.put(
   "/:testCaseId",
-  validatePermission("Team & Role", "add"),
+  validatePermission("testcase", "add"),
   updateTestCase
 );
 Router.get(
   "/:testCaseId/details",
-  validatePermission("Team & Role", "add"),
+  validatePermission("testcase", "add"),
   getTestCaseDetailsById
 );
 
 Router.get(
   "/project/:projectId",
-  validatePermission("Team & Role", "add"),
+  validatePermission("testcase", "add"),
   getAllTestCase
 );
 
 Router.get(
   "/:testCaseId/teststeps",
-  validatePermission("Team & Role", "add"),
+  validatePermission("testcase", "add"),
   getTestStepByTestCase
 );
 
 Router.delete(
   "/:testCaseId",
-  validatePermission("Team & Role", "add"),
+  validatePermission("testcase", "add"),
   deleteTestCase
 );
 
