# Backend/index.js
@@ -14,7 +14,6 @@ import testCaseRoutes from "./Routes/TestCase/testCaseRoutes.js";
 import testObjectRoutes from "./Routes/TestCase/testObjectRoutes.js";
 import testStepRoutes from "./Routes/TestCase/testStepRoutes.js";
 import testParameterRoutes from "./Routes/TestCase/testParameterRoutes.js";
-import testProcessRoutes from "./Routes/TestCase/testProcessRoutes.js";
 import reusableFlowRoutes from "./Routes/TestCase/reusableFlowRoutes.js";
 import dashboardRoutes from "./Routes/dashboardRoutes.js";
 
@@ -54,7 +53,6 @@ app.use("/testcase", testCaseRoutes);
 app.use("/testobject", testObjectRoutes);
 app.use("/teststep", testStepRoutes);
 app.use("/testparameter", testParameterRoutes);
-app.use("/testProcess", testProcessRoutes);
 app.use("/reusableFlow", reusableFlowRoutes);
 app.use("/dashboard", dashboardRoutes);
 
